--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
   "dependencies": {
     "vue": "^2.7.9",
     "vue-template-compiler": "^2.1.8",
@@ -6,9 +10,11 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@vue/cli-service": "~5.0.8",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.2",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   }
 }
