--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.8",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
